# pandemic

./: Cargo.toml  Trunk.toml  build_web.sh  index.html
docs/: index.html  pandemic-b2c8b1505c7a5ef8_bg.wasm  pandemic.js  pandemic_bg.wasm
src/: main.rs
