[package]
name = "pandemic"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
] }
getrandom = { version = "0.3.4", features = ["wasm_js"]}
egui = "0.33.3"
rand = "0.9.2"
web-time = "1.1.0"

[features]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
